0.1717
    - added EXPERIMEfNTAL get_table_info
    - added user_table_info attribute and each_table find in user_tables if set.
0.1716
    - fixed bugs when using DBD::Oracle.
    - added EXPERIMENTAL show_tables method.
0.1715
    - default quote attribute in ODBC driver is changed to "[]"
    - fixed some bug in Microsoft SQL Server
    - added EXPERIMENTAL execute method sqlfilter option
0.1714
    - fixed not backword compatible change in 0.1712 query_buider
0.1713
    - fixed memory leak and connection increasing bug when using model.
0.1712
    - you can set any string as separator
    - fixed memory leak and connection increasing bug, and query_buider method return new object.
    - added EXPERIMENTAL exclude_table attribute
    - added EXPERIMENTAL show_typename method
    - added EXPERIMENTAL show_datatype method
0.1711
    - renamed EXPERIMENTAL available_type_name to available_typename
    - renamed EXPERIMENTAL available_data_type to available_datatype
    - added EXPERIMENTAL DBIx::Custom::Where if method
    - added EXPERIMENTAL DBIx::Custom::Where map method
0.1710
    - use more DBIx::Custom information in sub modules to decrease bugs
      (very sorry, this change can't keep backword compatible,
       but maybe no effects,
       because the attributes is automatically set by DBIx::Custom, not user).
    - Fixed fisrt executed where clause failed in some condition.
0.1709
    - fixed named placeholder bug and added escape syntax
0.1708
    - improved execute method performance
0.1707
    - I call :title named placeholder, stoping calling it parameter
    - removed some EXPERIMENTAL status
    - fixed performance
0.1706
    - Added execute method's query option document
      You can get more performance.
    - DBIx::Custom::Query table and filters attribute method and
      filter method is DEPRECATED!
      because I think query object must have only the information
      for statement handle caching.
0.1705